[gd_scene load_steps=7 format=3 uid="uid://cfl3ilegrwtcq"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_krryd"]
[ext_resource type="FontFile" uid="uid://c4xh4jj0r4xg6" path="res://Fonts/AncientModernTales-a7Po.ttf" id="2_33yt7"]
[ext_resource type="Texture2D" uid="uid://bu8w4gbcolq55" path="res://Assets/Untitled design.png" id="3_3384x"]
[ext_resource type="AudioStream" uid="uid://cw6akw0smobyh" path="res://Music/Menu-3-1.mp3" id="4_65bpp"]

[sub_resource type="LabelSettings" id="LabelSettings_38vv3"]
font = ExtResource("2_33yt7")
font_size = 60
font_color = Color(1, 0.478431, 0.027451, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ua6uu"]
font = ExtResource("2_33yt7")
font_size = 50
font_color = Color(1, 0.262745, 0.027451, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
visibility_layer = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_krryd")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 489.0
offset_top = 111.0
offset_right = 804.0
offset_bottom = 180.0
text = "Typing Recall"
label_settings = SubResource("LabelSettings_38vv3")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 455.0
offset_top = 188.0
offset_right = 835.0
offset_bottom = 257.0
text = "A batalha das memórias"
label_settings = SubResource("LabelSettings_ua6uu")
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -159.0
offset_right = 317.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3384x")

[node name="Iniciar" type="Button" parent="."]
layout_mode = 0
offset_left = 489.0
offset_top = 274.0
offset_right = 808.0
offset_bottom = 331.0
text = "Iniciar Jogo"

[node name="Opcoes" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 489.0
offset_top = 364.0
offset_right = 806.0
offset_bottom = 420.0
alignment = 1

[node name="Creditos" type="Button" parent="."]
layout_mode = 0
offset_left = 490.0
offset_top = 456.0
offset_right = 805.0
offset_bottom = 514.0
text = "Créditos
"

[node name="Sair" type="Button" parent="."]
layout_mode = 0
offset_left = 490.0
offset_top = 550.0
offset_right = 805.0
offset_bottom = 608.0
text = "Sair"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_65bpp")
autoplay = true

[connection signal="pressed" from="Iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="Creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="Sair" to="." method="_on_sair_pressed"]
